src/tests/testfiles/binary-operators/25.txt
testfiles/binary-operators/25.c:2:5: error: invalid operands to logical 'or' (have 'char *' and 'char *', need 'int' and 'int')
"a" || "b";
^
